--- a/load_meli_dataset_pesos_y_medidas.ipynb
+++ b/load_meli_dataset_pesos_y_medidas.ipynb
@@ -1192,12 +1192,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## COMO TRATAR LOS OUTLIERS, SERGIO ANOTAR"
+    "#### Detección de outliers "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En los diversos boxplots graficados previemente, se puedo determinar que existen outliers dado que hay puntos que exceden a $Q_3 + 1.5 \\times RI$. Siguiendo dicho criterio, se encuentran los siguientes outliers en las variables numéricas del dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Outliers de SHP_WEIGHT"
    ]
   },
   {
@@ -1205,7 +1217,107 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#df[\"SHP_WEIGHT\"].describe()\n",
+    "#q75, q25 = np.percentile(df[\"SHP_WEIGHT\"], [75,25])\n",
+    "#iqr = q75 - q25\n",
+    "#q1=np.percentile(df[\"SHP_WEIGHT\"], 25)\n",
+    "#q3=np.percentile(df[\"SHP_WEIGHT\"], 75)\n",
+    "\n",
+    "q1=df[\"SHP_WEIGHT\"].quantile(0.25)\n",
+    "q3=df[\"SHP_WEIGHT\"].quantile(0.75)\n",
+    "\n",
+    "LSO = q3 + 1.5 * (q3-q1)\n",
+    "df[\"SHP_WEIGHT\"][df[\"SHP_WEIGHT\"]>LSO]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Outliers de SHP_LENGTH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1=df[\"SHP_LENGTH\"].quantile(0.25)\n",
+    "q3=df[\"SHP_LENGTH\"].quantile(0.75)\n",
+    "\n",
+    "LSO = q3 + 1.5 * (q3-q1)\n",
+    "df[\"SHP_LENGTH\"][df[\"SHP_LENGTH\"]>LSO]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Outliers de SHP_WIDTH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1=df[\"SHP_WIDTH\"].quantile(0.25)\n",
+    "q3=df[\"SHP_WIDTH\"].quantile(0.75)\n",
+    "\n",
+    "LSO = q3 + 1.5 * (q3-q1)\n",
+    "df[\"SHP_WIDTH\"][df[\"SHP_WIDTH\"]>LSO]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Outliers de SHP_HEIGHT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1=df[\"SHP_HEIGHT\"].quantile(0.25)\n",
+    "q3=df[\"SHP_HEIGHT\"].quantile(0.75)\n",
+    "\n",
+    "LSO = q3 + 1.5 * (q3-q1)\n",
+    "df[\"SHP_HEIGHT\"][df[\"SHP_HEIGHT\"]>LSO]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Outliers de PRICE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1=df[\"PRICE\"].quantile(0.25)\n",
+    "q3=df[\"PRICE\"].quantile(0.75)\n",
+    "\n",
+    "LSO = q3 + 1.5 * (q3-q1)\n",
+    "df[\"PRICE\"][df[\"PRICE\"]>LSO]"
+   ]
   }
  ],
  "metadata": {
