--- a/TP2.ipynb
+++ b/TP2.ipynb
@@ -111,6 +111,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.head(10000) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [
@@ -518,9 +527,6 @@
     "# df= df.dropna(df.filter(regex ='SHP_'))\n",
     "\n",
     "\n",
-    "# df = df.head(10000) #esto no iria, solo tomo 10000 para q no demore tanto\n",
-    "\n",
-    "\n",
     "#df.sample(3)\n",
     "\n"
    ]
@@ -536,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -560,138 +566,141 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ITEM_ID</th>\n",
        "      <th>SHP_WEIGHT</th>\n",
        "      <th>SHP_LENGTH</th>\n",
        "      <th>SHP_WIDTH</th>\n",
        "      <th>SHP_HEIGHT</th>\n",
-       "      <th>ATTRIBUTES</th>\n",
-       "      <th>CATALOG_PRODUCT_ID</th>\n",
-       "      <th>CONDITION</th>\n",
-       "      <th>DOMAIN_ID</th>\n",
        "      <th>PRICE</th>\n",
-       "      <th>SELLER_ID</th>\n",
-       "      <th>TITLE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ITEM_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>458916</td>\n",
-       "      <td>ZXDNQWWC97</td>\n",
-       "      <td>560.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>[{'id': 'BRAND', 'name': 'Marca', 'value_id': ...</td>\n",
-       "      <td>H53U1H7Q5G</td>\n",
-       "      <td>new</td>\n",
-       "      <td>MLB-TOYS_AND_GAMES</td>\n",
-       "      <td>42.50</td>\n",
-       "      <td>YIGFKUBH9R</td>\n",
-       "      <td>Brinquedo Rambo Espoleta 1 Revolver+1cartela+7...</td>\n",
+       "      <td>A002DG7EAZ</td>\n",
+       "      <td>812.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>171786</td>\n",
-       "      <td>HBWGONYQ8K</td>\n",
-       "      <td>5000.0</td>\n",
-       "      <td>86.0</td>\n",
+       "      <td>A00SG33UIH</td>\n",
+       "      <td>2320.0</td>\n",
+       "      <td>16.0</td>\n",
        "      <td>11.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>[{'id': 'BRAND', 'name': 'Marca', 'value_id': ...</td>\n",
-       "      <td>H53U1H7Q5G</td>\n",
-       "      <td>new</td>\n",
-       "      <td>MLB-NAIL_POLISH_SHELVES</td>\n",
-       "      <td>65.00</td>\n",
-       "      <td>TYAQEEJ32G</td>\n",
-       "      <td>Nicho Organizador De Esmaltes C/ 5 Prateleiras...</td>\n",
+       "      <td>149.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>374651</td>\n",
-       "      <td>J03GGG9QOQ</td>\n",
-       "      <td>3930.0</td>\n",
-       "      <td>110.8</td>\n",
-       "      <td>47.4</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>[{'id': 'BRAND', 'name': 'Marca', 'value_id': ...</td>\n",
-       "      <td>H53U1H7Q5G</td>\n",
-       "      <td>new</td>\n",
-       "      <td>MLB-ACOUSTIC_GUITARS</td>\n",
-       "      <td>508.89</td>\n",
-       "      <td>I1ZR161MRF</td>\n",
-       "      <td>Violão Eletrico Folk Memphis Tagima Md-18 Oferta</td>\n",
+       "      <td>A00VIC9XL7</td>\n",
+       "      <td>213.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>329.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>49715</td>\n",
-       "      <td>TV93S1U6OK</td>\n",
-       "      <td>11340.0</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>18.4</td>\n",
-       "      <td>17.2</td>\n",
-       "      <td>[{'id': 'BATTERY_CAPACITY', 'name': 'Capacidad...</td>\n",
-       "      <td>H1BVD3QEPG</td>\n",
-       "      <td>new</td>\n",
-       "      <td>MLB-UPS_BATTERIES</td>\n",
-       "      <td>233.99</td>\n",
-       "      <td>LE3685L23P</td>\n",
-       "      <td>Bateria 12v 17ah Csb No Break Apc Sms Gp12170</td>\n",
+       "      <td>A00VM7MP9F</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>45.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>469369</td>\n",
-       "      <td>KAJ9HQ155N</td>\n",
-       "      <td>1050.0</td>\n",
+       "      <td>A00W1VSE3K</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>31.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>ZZZ3SAO9N3</td>\n",
+       "      <td>2030.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>40.0</td>\n",
        "      <td>20.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>[{'id': 'BRAND', 'name': 'Marca', 'value_id': ...</td>\n",
-       "      <td>H53U1H7Q5G</td>\n",
-       "      <td>new</td>\n",
-       "      <td>MLB-VEHICLE_PARTS</td>\n",
-       "      <td>150.00</td>\n",
-       "      <td>PYC6UGNFBD</td>\n",
-       "      <td>Protetor Radiador E Eliminador Rabeta Fixo Mt0...</td>\n",
+       "      <td>349.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>ZZZMIXSNBZ</td>\n",
+       "      <td>8030.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>759.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>ZZZOE5LENH</td>\n",
+       "      <td>876.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>129.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>ZZZWGDHGBS</td>\n",
+       "      <td>1190.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>35.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>ZZZYW7MMYI</td>\n",
+       "      <td>490.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>49.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>236443 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           ITEM_ID  SHP_WEIGHT  SHP_LENGTH  SHP_WIDTH  SHP_HEIGHT  \\\n",
-       "458916  ZXDNQWWC97       560.0        23.0       18.0        15.0   \n",
-       "171786  HBWGONYQ8K      5000.0        86.0       11.0         4.0   \n",
-       "374651  J03GGG9QOQ      3930.0       110.8       47.4        18.6   \n",
-       "49715   TV93S1U6OK     11340.0        19.5       18.4        17.2   \n",
-       "469369  KAJ9HQ155N      1050.0        20.0       20.0        20.0   \n",
+       "            SHP_WEIGHT  SHP_LENGTH  SHP_WIDTH  SHP_HEIGHT   PRICE\n",
+       "ITEM_ID                                                          \n",
+       "A002DG7EAZ       812.0        36.0       32.0        12.0     NaN\n",
+       "A00SG33UIH      2320.0        16.0       11.0         4.0  149.99\n",
+       "A00VIC9XL7       213.0        16.0       13.0        10.0  329.00\n",
+       "A00VM7MP9F       175.0        25.0       20.0        15.0   45.00\n",
+       "A00W1VSE3K        82.0        30.0       15.0         5.0   31.98\n",
+       "...                ...         ...        ...         ...     ...\n",
+       "ZZZ3SAO9N3      2030.0        60.0       40.0        20.0  349.00\n",
+       "ZZZMIXSNBZ      8030.0        52.0       52.0        23.0  759.99\n",
+       "ZZZOE5LENH       876.0        25.0       25.0         5.0  129.90\n",
+       "ZZZWGDHGBS      1190.0        33.0       26.0        17.0   35.10\n",
+       "ZZZYW7MMYI       490.0        16.0       11.0         4.0   49.00\n",
        "\n",
-       "                                               ATTRIBUTES CATALOG_PRODUCT_ID  \\\n",
-       "458916  [{'id': 'BRAND', 'name': 'Marca', 'value_id': ...         H53U1H7Q5G   \n",
-       "171786  [{'id': 'BRAND', 'name': 'Marca', 'value_id': ...         H53U1H7Q5G   \n",
-       "374651  [{'id': 'BRAND', 'name': 'Marca', 'value_id': ...         H53U1H7Q5G   \n",
-       "49715   [{'id': 'BATTERY_CAPACITY', 'name': 'Capacidad...         H1BVD3QEPG   \n",
-       "469369  [{'id': 'BRAND', 'name': 'Marca', 'value_id': ...         H53U1H7Q5G   \n",
-       "\n",
-       "       CONDITION                DOMAIN_ID   PRICE   SELLER_ID  \\\n",
-       "458916       new       MLB-TOYS_AND_GAMES   42.50  YIGFKUBH9R   \n",
-       "171786       new  MLB-NAIL_POLISH_SHELVES   65.00  TYAQEEJ32G   \n",
-       "374651       new     MLB-ACOUSTIC_GUITARS  508.89  I1ZR161MRF   \n",
-       "49715        new        MLB-UPS_BATTERIES  233.99  LE3685L23P   \n",
-       "469369       new        MLB-VEHICLE_PARTS  150.00  PYC6UGNFBD   \n",
-       "\n",
-       "                                                    TITLE  \n",
-       "458916  Brinquedo Rambo Espoleta 1 Revolver+1cartela+7...  \n",
-       "171786  Nicho Organizador De Esmaltes C/ 5 Prateleiras...  \n",
-       "374651  Violão Eletrico Folk Memphis Tagima Md-18 Oferta   \n",
-       "49715       Bateria 12v 17ah Csb No Break Apc Sms Gp12170  \n",
-       "469369  Protetor Radiador E Eliminador Rabeta Fixo Mt0...  "
+       "[236443 rows x 5 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "medianas = df.groupby('ITEM_ID').median()\n",
-    "ytr"
+    "medianas\n"
    ]
   },
   {
